# cad-agent

./: .gitignore  AGENTS.md  LESSONS.md  LOG.md  MEMORY.md  README.md  pyproject.toml
docs/: agentic-cad-harness-spec.md  coverage.md  inertia-consumers.md
docs/adr/: 0001-agentic-harness-contract.md  0002-build123d-integration.md  0003-real-view-rendering.md  0004-end-to-end-agent-loop.md  0005-isolated-execution-worker.md  0006-richer-requirement-checks.md  0007-automatic-feature-detection.md  0008-loop-orchestration.md  0009-exact-geometric-clearance.md  0010-richer-feature-detection.md  (+47 more)
tests/: test_aggregate_role_visibility.py  test_assembly_inertia.py  test_assembly_placement.py  test_assembly_rendering.py  test_assembly_robustness.py  test_assembly_section_render.py  test_bom.py  test_build123d_integration.py  test_center_of_mass.py  test_cli_contract.py  test_contact_sheet.py  test_density_unit_contract.py  test_detected_feature_dedup.py  test_dxf_export.py  test_dxf_export_unit.py  test_end_to_end_agent_loop.py  test_exact_clearance.py  test_feature_dedup.py  test_feature_detection.py  test_feature_tolerance.py  test_flat_registry.py  test_graceful_evaluation.py  test_inertia_semantics.py  test_isolated_worker.py  test_joint_placement.py  test_kinematic_joints.py  test_link_frame_inertia.py  test_loop_orchestration.py  test_manufacturability.py  test_mate_frame_export.py  test_mate_placement_conflict.py  test_material_density.py  test_multi_view_shots.py  test_packaging.py  test_parametric.py  test_parent_relative_frames.py  test_part_frame_dimensions.py  test_publish.py  test_real_rendering.py  test_render_materials.py  (+13 more)
(+20 files in other folders)
