[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-agent"
version = "0.1.0"
description = "Agent-facing CAD harness for build123d projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=5.4",
]

[project.optional-dependencies]
cad = [
  "build123d>=0.10",
]
render = [
  "Pillow>=9.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
cadx = "cadx.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
