[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-agent"
version = "0.1.0"
description = "Agent-facing CAD harness for build123d projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=5.4",
]

[project.optional-dependencies]
cad = [
  # Capped below 0.11: build123d 0.11.x silently breaks the interference
  # check (overlaps pass) and crashes the renderer's assembly-combine path.
  # See ADR 0030 / deficiency D-001. Lift the cap only in the ADR that
  # adopts the 0.11 API.
  "build123d>=0.10,<0.11",
]
render = [
  "Pillow>=9.0",
]
test = [
  "pytest>=8.0",
  # ezdxf backs the DXF flat-pattern parse-back tests; without it those tests
  # importorskip and silently pass. See ADR 0030 / deficiency D-002.
  "ezdxf>=1.0",
]

[project.scripts]
cadx = "cadx.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
